--- a/style.css
+++ b/style.css
@@ -3,4 +3,8 @@
     justify-content: center;
     height: 100vh;
     align-items: center;
+    flex-direction: column;
+}
+#profile-card{
+    opacity: 0;
 }
